content: added instruction text

--- a/aufgabe1.html
+++ b/aufgabe1.html
@@ -104,6 +104,7 @@
 							
 						</section>
 						<section>
+							<h3>Spin that record. Press the 'R' or 'L' key!</h3>
 							<img src="images/1.png" id="images" width="595" height="471" />
 						</section>
 
