added EA1 Description

--- a/aufgabe1.html
+++ b/aufgabe1.html
@@ -105,6 +105,7 @@
 						</section>
 						<section>
 							<h3>Spin that record. Press the 'R' or 'L' key!</h3>
+							<p>I created an array of pictures and added 2 event listeners for the R and L key.<br>Each time the button is pressed the array index will be either incremented or decremented.<br>The images used are under creative common license and can be found at <a href="www.pexels.com" target="_blank">www.pexels.com</a></p>
 							<img src="images/1.png" id="images" width="595" height="471" />
 						</section>
 
