content: website styling

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
 									<div class="content">
 										<header>
 											<h1>Pavel Kiryakov<br /><h1>
-												<h2>	Graphical Visualisation Technologies </h2>
+											<h2>Graphical Visualisation Technologies</h2>
 											<p>Wintersemester 2022/2023</p>
-											<p>THB Matrikelnummer: 20229112</p>
+											<p>Technische Hochschule Brandenburg</p>
+											<p>Matrikelnummer: 20229112</p>
 										</header>
 										<p>This semester we have 10 mandatory exercises.<br>Each of them can be viewed by clicking on the menu on the left.<br>Enjoy!</p>
 										
