--- a/aufgabe1.html
+++ b/aufgabe1.html
@@ -13,6 +13,7 @@
 	</head>
 	<script>
 		const images = [
+		  "images/0.png",
 		  "images/1.png",
 		  "images/2.png",
 		  "images/3.png",
@@ -34,8 +35,7 @@
 		  "images/19.png",
 		  "images/20.png",
 		  "images/21.png",
-		  "images/22.png",
-		  "images/23.png",
+		  "images/22.png"
 		];
 	
 		var index = 0;
@@ -106,7 +106,7 @@
 						<section>
 							<h3>Spin that record. Press the 'R' or 'L' key!</h3>
 							<p>I created an array of pictures and added 2 event listeners for the R and L key.<br>Each time the button is pressed the array index will be either incremented or decremented.<br>The images used are under creative common license and can be found at <a href="www.pexels.com" target="_blank">www.pexels.com</a></p>
-							<img src="images/1.png" id="images" width="595" height="471" />
+							<img src="images/0.png" id="images" width="595" height="471" />
 						</section>
 
 					</div>
