content: loop animation

--- a/aufgabe1.html
+++ b/aufgabe1.html
@@ -74,6 +74,11 @@
      	}
     	document.getElementById("images").src = images[index];
     	}
+
+		function stopAnimation()
+		{
+    		document.getElementById('foo').setAttribute("class", "style1");
+		}
 	  </script>
 	<body class="is-preload">
 
@@ -112,6 +117,10 @@
 							<h3>Spin that record. Press the 'R' or 'L' key!</h3>
 							<p>I created an array of pictures and added 2 event listeners for the R and L key.<br>Each time the button is pressed the array index will be either incremented or decremented.<br>The images used are under creative common license and can be found at <a href="www.pexels.com" target="_blank">www.pexels.com</a></p>
 							<img src="images/0.png" id="images" width="595" height="471" />
+						</section>
+						<section>
+							<h3>Loop animation</h3>
+						<div class="bunny"></div>
 						</section>
 
 					</div>
