content: changed explanation

--- a/aufgabe1.html
+++ b/aufgabe1.html
@@ -127,7 +127,7 @@
 						</section>
 						<section>	
 							<h3>Make the bunny running and stop it by pressing the 'А' key!</h3>
-							<p>This time i used spritesheet which i had to make from separate bunny PNGs.<br>I created the animation in CSS by using keyframes.<br>I then added an EventListener for the A key and also a counter for the number of 'A's pressed.<br>If the number is an uneven number (1,3,5...) it changes the animation-play-state to 'running.' <br>The images used are under creative common license and can be found at <a href="www.freepik.com" target="_blank">www.freepik.com</a></p>
+							<p>This time i used spritesheet which i had to make from separate bunny PNGs.<br>I created the animation in CSS by using keyframes.<br>I then added an EventListener for the A key and also a counter for the number of 'A's pressed.<br>Depending if the counter is an even or uneven number the state of animation-play-state toggles between 'running' and 'paused'.<br>The images used are under creative common license and can be found at <a href="www.freepik.com" target="_blank">www.freepik.com</a></p>
 						<div class="bunny"></div>
 						</section>
 
