--- a/aufgabe1.html
+++ b/aufgabe1.html
@@ -126,7 +126,7 @@
 							<p>Die Scheibe dreht sich automatisch mit Taste "a", dazu muss diese kontinuierlich animiert werden (die Animation sollte bei einem weiteren Drücken von "a" auch wieder angehalten werden).</p>
 						</section>
 						<section>	
-							<h3>Make the bunny running and stop it by pressing the 'А' key!</h3>
+							<h3>Make the bunny run and stop it by pressing the 'А' key!</h3>
 							<p>This time i used spritesheet which i had to make from separate bunny PNGs.<br>I created the animation in CSS by using keyframes.<br>I then added an EventListener for the A key and also a counter for the number of 'A's pressed.<br>Depending if the counter is an even or uneven number the state of animation-play-state toggles between 'running' and 'paused'.<br>The images used are under creative common license and can be found at <a href="www.freepik.com" target="_blank">www.freepik.com</a></p>
 						<div class="bunny"></div>
 						</section>
