--- a/aufgabe2.html
+++ b/aufgabe2.html
@@ -41,7 +41,7 @@
 
 				</section>
 				<h1>A Stag</h1>
-				<p>I ended up using 51 vertices and GL_LINE_LOOP.<br>On the right side you can see the reference as well as the map i made to get the needed coordinates.</p>
+				<p>I ended up using 51 vertices and GL_LINE_LOOP.<br>On the right side you can see the reference as well as the map i made to get the proper coordinates.</p>
 				<canvas width="300" height="600" id="my_Canvas"></canvas>
 				<img src="images/stagmap.png" width="300" height="600" alt="" style="max-width: 50%;" />
 				<section>
