--- a/index.html
+++ b/index.html
@@ -1,79 +1,87 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>GVT PK</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="is-preload">
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+<head>
+	<title>GVT PK</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+</head>
 
-				<!-- Main -->
-					<div id="main">
-						<div class="inner">
+<body class="is-preload">
 
-							<!-- Header -->
-								<!-- <header id="header">
+	<!-- Wrapper -->
+	<div id="wrapper">
+
+		<!-- Main -->
+		<div id="main">
+			<div class="inner">
+
+				<!-- Header -->
+				<!-- <header id="header">
 								</header> -->
 
-							<!-- Banner -->
-								<section id="banner">
-									<div class="content">
-										<header>
-											<h1>Pavel Kiryakov<br /><h1>
-											<h2>Graphical Visualisation Technologies</h2>
-											<p>Wintersemester 2022/2023</p>
-											<p>Technische Hochschule Brandenburg</p>
-											<p>Matrikelnummer: 20229112</p>
-										</header>
-										<p>This semester we have 10 mandatory exercises.<br>Each of them can be viewed by clicking on the menu on the left.<br>Enjoy!</p>
-										
-									</div>
-									<span class="image object">
-										<img src="images/pic10.jpg" alt="" 
-										style="max-width: 50%;"/>
-									</span>
-								</section>
+				<!-- Banner -->
+				<section id="banner">
+					<div class="content">
+						<header>
+							<h1>Pavel Kiryakov<br />
+								<h1>
+									<h2>Graphical Visualisation Technologies</h2>
+									<p>Wintersemester 2022/2023</p>
+									<p>Technische Hochschule Brandenburg</p>
+									<p>Matrikelnummer: 20229112</p>
+						</header>
+						<p>This semester we have 10 mandatory exercises.<br>Each of them can be viewed by clicking on
+							the menu on the left.<br>Enjoy!</p>
 
-						</div>
 					</div>
-
-				<!-- Sidebar -->
-					<div id="sidebar">
-						<div class="inner">			
-
-							<!-- Menu -->
-								<nav id="menu">
-									<header class="major">
-										<h2>Menu</h2>
-									</header>
-									<ul>
-										<li><a href="index.html">Homepage</a></li>
-										<li><a href="aufgabe1.html">Exercise 1</a></li>
-										<li><a href="aufgabe2.html">Exercise 2</a></li>										
-									</ul>
-								</nav>
-
-
-							<!-- Footer -->
-								<footer id="footer">
-									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. </p>
-								</footer>
-
-						</div>
-					</div>
+					<span class="image object">
+						<img src="images/pic10.jpg" alt="" style="max-width: 50%;" />
+					</span>
+				</section>
 
 			</div>
+		</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		<!-- Sidebar -->
+		<div id="sidebar">
+			<div class="inner">
 
-	</body>
+				<!-- Menu -->
+				<nav id="menu">
+					<header class="major">
+						<h2>Menu</h2>
+					</header>
+					<ul>
+						<li><a href="index.html">Homepage</a></li>
+						<li><a href="aufgabe1.html">Exercise 1</a></li>
+						<li><a href="aufgabe2.html">Exercise 2</a></li>
+						<li><a href="aufgabe3.html">Exercise 3</a></li>
+						<li><a href="aufgabe4.html">Exercise 4</a></li>
+						<li><a href="aufgabe5.html">Exercise 5</a></li>
+					</ul>
+				</nav>
+
+
+				<!-- Footer -->
+				<footer id="footer">
+					<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a
+							href="https://unsplash.com">Unsplash</a>. </p>
+				</footer>
+
+			</div>
+		</div>
+
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
