content: add changes

--- a/aufgabe2.html
+++ b/aufgabe2.html
@@ -28,7 +28,7 @@
 							<h1>Exercise 2 2D Geometrie aus Linien<br />
 								<h1>
 						</header>
-						<p>45 Minuten</p>
+						<p>Bearbeitungszeit: 45 Minuten</p>
 						<p>Erstellen Sie eine eigene 2D-Geometrie aus Linien (etwa 30 Vertices) und stellen Sie diese
 							mittels WebGL dar. Dabei können Sie GL_LINES, GL_LINE_STRIP oder GL_LINE_LOOP verwenden.</p>
 						<p>Sie können die Geometrie auch algorithmisch erzeugen, das bedeutet Sie schreiben Code
@@ -41,7 +41,8 @@
 
 				</section>
 				<h1>A Stag</h1>
-				<p>I ended up using 51 vertices and GL_LINE_LOOP.<br>On the right side you can see the reference as well as the map i made to get the proper coordinates.</p>
+				<p>I ended up using 51 vertices and GL_LINE_LOOP.<br>On the right side you can see the reference as well
+					as the map i made to get the proper coordinates.</p>
 				<canvas width="300" height="600" id="my_Canvas"></canvas>
 				<img src="images/stagmap.png" width="300" height="600" alt="" style="max-width: 50%;" />
 				<section>
@@ -64,6 +65,9 @@
 						<li><a href="index.html">Homepage</a></li>
 						<li><a href="aufgabe1.html">Exercise 1</a></li>
 						<li><a href="aufgabe2.html">Exercise 2</a></li>
+						<li><a href="aufgabe3.html">Exercise 3</a></li>
+						<li><a href="aufgabe4.html">Exercise 4</a></li>
+						<li><a href="aufgabe5.html">Exercise 5</a></li>
 					</ul>
 				</nav>
 
