content: llama colors

--- a/aufgabe3.html
+++ b/aufgabe3.html
@@ -89,130 +89,202 @@
 		var vertices = [
 			//x, y, z
 
-			//1
+			//1 #8C45AC
 			-0.45, -1, 0, //0
 			-0.65, -1, 0, //1
 			-0.8, -0.8, 0, //2
 
 
 
-			//2
+			//2  #038B81 
 			-0.6, -0.92, 0, //3
 			-0.6, -0.72, 0, //4
 
 
-			//3
+			//3 #EAEDFA
 			-0.8, -0.42, 0, //5
 
 
-			//4
+			//4 #A075B7
 			-0.37, -0.48, 0, //6
 
 
-			//5
+			//5 #EAEDFA
 			-0.35, -0.35, 0, //7
 
 
-			//6
+			//6 #90DFFA
 			-0.8, -0.1, 0, //8
 
 
-			//7
+			//7 #0EAC4E
 			-0.4, 0, 0, //9
 
-			//8
+			//8 #48EAE1
 			-0.7, 0.2, 0, //10
 
-			//9
+			//9 #0AAAA4
 			-1, -0.05, 0, //11
 
-			//10
+			//10 #EAEDFA
 			-1, -0.26, 0, //12
 
-			//11
+			//11 #ECEEFB
 			-0.9, -0.34, 0, //13
 
-			//12
+			//12 #CEA0E4
 			0.1, 0.2, 0, //14
 
-			//13
+			//13 #AA69C6
 			0.45, -0.1, 0, //15
 
-			//14
+			//14 #F6AC35
 			0.2, -0.4, 0, //16
 
-			//15
+			//15 #E5734C
 			//already there
 
-			//16
+			//16 #3EDB80
 			0.55, -0.45, 0, //17
 
-			//17
+			//17 #5EFCA0
 			0.31, -0.7, 0, //18
 
-			//18
+			//18 #FCBDD5
 			0.6, -0.8, 0, //19
 
-			//19
+			//19 #F27DB4
 			0.4, -0.85, 0, //20
 
-			//20
-			0.57, -0.95, 0, //21
+			//20 #08ABA3
+			0.57, -0.935, 0, //21
 
-			//21		
+			//21 #A96AC6	 	
 			0.7, -1., 0, //22
 			0.4, -1, 0, //23
 
-			//22
+			//22 #FD6D5C
 			0.84, -0.17, 0, //24
 
-			//23
+			//23 #24A7F1
 			0.9, 0.2, 0, //25
 
-			//24
+			//24 #0386D1
 			0.65, 0.45, 0, //26
 
-			//25
+			//25 #FE8BC9
 			0.38, 0.18, 0, //27
 
-			//26
+			//26 #FE6BAB
 			//already there
 
-			//27
+			//27 #F8C03A
 			0.4, 0.2, 0, //28
 			0.4, 0.81, 0, //29
 			0.82, 0.62, 0, //30
-			
 
-			//28
+
+			//28 #19B6FD
 			0.82, 0.28, 0, //31
 
-			//29
+			//29 #50ED8F
 			0.85, 0.8, 0, //32
 
-			//30
+			//30 #E875AA
 			1, 0.7, 0, //33
 
-			//31
+			//31 #FE8AC3
 			1, 0.75, 0, //34
 
-			//32
+			//32 #28CCC2
 			0.6, 0.9, 0, //35
 			0.7, 0.8, 0, //36
-		
 
-			//33
+
+			//33 #61FAF8
 			0.85, 0.85, 0, //37
 
-			//34
+			//34 #AE66C5
 			//blank - all points are given
 
-			//35
+			//35 #0C86CC
 			0.6, 1, 0, //38
 
 		];
 
-		var colors = [0, 0, 1, 1, 0, 0, 0, 1, 0, 1, 0, 1, ];
+		var colors = [
+			0.549, 0.271, 0.675,
+
+			0.012, 0.545, 0.506,
+
+			0.918, 0.929, 0.98,
+
+			0.627, 0.459, 0.718,
+
+			0.918, 0.929, 0.98,
+
+			0.565, 0.875, 0.98,
+
+			0.055, 0.675, 0.306,
+
+			0.282, 0.918, 0.882,
+
+			0.039, 0.667, 0.643,
+
+			0.918, 0.929, 0.98,
+
+			0.925, 0.933, 0.984,
+
+			0.808, 0.627, 0.894,
+
+			0.667, 0.412, 0.776,
+
+			0.965, 0.675, 0.208,
+
+			0.898, 0.451, 0.298,
+
+			0.243, 0.859, 0.502,
+
+			0.369, 0.988, 0.627,
+
+			0.988, 0.741, 0.835,
+
+			0.949, 0.49, 0.706,
+
+			0.031, 0.671, 0.639,
+
+			0.663, 0.416, 0.776,
+
+			0.992, 0.427, 0.361,
+
+			0.141, 0.655, 0.945,
+
+			0.012, 0.525, 0.82,
+
+			0.996, 0.545, 0.788,
+
+			0.996, 0.42, 0.671,
+
+			0.973, 0.753, 0.227,
+
+			0.098, 0.714, 0.992,
+
+			0.314, 0.929, 0.561,
+
+			0.91, 0.459, 0.667,
+
+			0.996, 0.541, 0.765,
+
+			0.157, 0.8, 0.761,
+
+			0.38, 0.98, 0.973,
+
+			0.682, 0.4, 0.773,
+
+			0.047, 0.525, 0.8,
+
+
+		];
 
 		var indices = [
 			0, 2, 1,
@@ -236,30 +308,20 @@
 			18, 19, 20,
 			19, 20, 21,
 			20, 22, 23,
-			15,17,24,
-			15,24,25,
-			15,25,26,
-			15,26,27,
-			15,27,14,
-			28,29,30,
-			26,30,31,
-			29,30,32,
-			32,30,33,
-			32,34,33,
-			29,35,36,
-			35,36,37,
-			36,37,32,
-			29,35,38
-
-			
-
-
-
-
-
-
-
-
+			15, 17, 24,
+			15, 24, 25,
+			15, 25, 26,
+			15, 26, 27,
+			15, 27, 14,
+			28, 29, 30,
+			26, 30, 31,
+			29, 30, 32,
+			32, 30, 33,
+			32, 34, 33,
+			29, 35, 36,
+			35, 36, 37,
+			36, 37, 32,
+			29, 35, 38
 
 		];
 
@@ -365,7 +427,7 @@
 		/*============Drawing the Quad====================*/
 
 		// Clear the canvas
-		gl.clearColor(0.5, 0.5, 0.5, 0.9);
+		gl.clearColor(1, 1, 1, 1);
 
 		// Enable the depth test
 		gl.enable(gl.DEPTH_TEST);
