content:finished project

--- a/aufgabe3.html
+++ b/aufgabe3.html
@@ -36,8 +36,10 @@
 
 				</section>
 				<h1>Llama</h1>
-				<p></p>
+				<p>I ended up using 35 Triangles and GL_Triangles.<br>On the right side you can see the map i made to get the proper coordinates.<br>This time it got a bit messy.<br>
+					<a target="_blank" href="https://www.vectorstock.com/royalty-free-vector/low-poly-llama-polygonal-triangular-geometric-vector-35018850">Reference</a> </p>
 				<canvas width="554" height="756" id="my_Canvas"></canvas>
+				<img src="images/llama2.png" width="227" height="378" alt="" style="max-width: 50%;" />
 				<section>
 
 				</section>
@@ -214,10 +216,11 @@
 
 		var colors = [
 			0.549, 0.271, 0.675,
+			0.549, 0.271, 0.675,
+			0.549, 0.271, 0.675,
 
+			0.012, 0.545, 0.506,	
 			0.012, 0.545, 0.506,
-
-			0.918, 0.929, 0.98,
 
 			0.627, 0.459, 0.718,
 
@@ -228,7 +231,7 @@
 			0.055, 0.675, 0.306,
 
 			0.282, 0.918, 0.882,
-
+		
 			0.039, 0.667, 0.643,
 
 			0.918, 0.929, 0.98,
@@ -281,6 +284,8 @@
 
 			0.682, 0.4, 0.773,
 
+			0.047, 0.525, 0.8,
+			0.047, 0.525, 0.8,
 			0.047, 0.525, 0.8,
 
 
