--- a/aufgabe4.html
+++ b/aufgabe4.html
@@ -77,7 +77,7 @@
 	</div>
 
 	<!-- Scripts -->
-	<script>
+	<!-- <script>
 	var canvas = document.getElementById('my_Canvas');
 		var gl = canvas.getContext('experimental-webgl');
 
@@ -320,7 +320,7 @@
 
 		// POINTS, LINE_STRIP, LINE_LOOP, LINES,
 		// TRIANGLE_STRIP,TRIANGLE_FAN, TRIANGLES
-	</script>
+	</script> -->
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/browser.min.js"></script>
 	<script src="assets/js/breakpoints.min.js"></script>
