--- a/aufgabe1.html
+++ b/aufgabe1.html
@@ -76,7 +76,7 @@
 			if (numberOfA % 2 > 0) {
 				document.querySelector(".bunny").style.animationPlayState = 'running';
 				console.log('start');
-			} else {
+			} else {Empore 
 				document.querySelector(".bunny").style.animationPlayState = 'paused';
 				console.log('pause');
 			}
