--- a/aufgabe4.html
+++ b/aufgabe4.html
@@ -25,22 +25,29 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h1>Exercise 3 Farbig gefüllte 2D Geometrie<br />
+							<h1>Exercise 4 Parametrisierte Flächen<br />
 								<h1>
 						</header>
-						<p>Bearbeitungszeit: 30 - 45 Minuten</p>
-						<p>Kolorieren Sie eine eigene 2D-Geometrie indem Sie nun Dreiecke (keine Linien)
-							erzeugen<br>(Sie können auf der Lösung der vorherigen Aufgabe aufbauen). Sie können dabei
-							einfarbige Flächen oder auch Farbverläufe einsetzen.</p>
+						<p>Bearbeitungszeit: 90 - 120 Minuten</p>
+						<p>1) Erzeugen Sie zwei neue parametrisierte Flächen (die nicht im Modul vorkommen) zunächst mit
+							Linien, siehe Material (dort gibt es viele Formeln die Sie verwenden können).<br>
+
+							2) Füllen Sie dann die Flächen und kolorieren Sie sie passend zur jeweiligen Flächenform,
+							z.B. mit Farbverläufen. Die Linien sollen noch sichtbar sein, oder es besteht die
+							Möglichkeit zwischen Linien und Füllung umzuschalten.<br>
+
+							3) Kreieren Sie auch eine eigene Parametrisierung für eine Fläche und kolorieren Sie diese.
+							Dazu sollen Sie sich eine neue Formel ausdenken, natürlich auf der Basis der vorhandenen
+							Formeln aufbauen (aus Module oder aus dem Material). Versuchen Sie Terme zu mischen und
+							schauen Sie, ob das passiert was Sie erwarten.... Alternativ suchen Sie sich eine Form und
+							versuchen Sie diese zu erzeugen, vielleicht "eine Qualle" oder Ihre Lampe (dieses Vorgehen
+							ist meist schwieriger).</p>
 					</div>
 
 				</section>
-				<canvas width="554" height="756" id="my_Canvas"></canvas>
-				<h1></h1>
-				<p></p>
-				<section>
-
-				</section>
+				<h1>Fish</h1>
+				<p>Material <a target="_blank" href="http://www.3d-meier.de/tut3/Seite44.html">3D Meier</a> </p>
+				<canvas width="500" height="500" id="my_Canvas"></canvas>
 
 			</div>
 		</div>
@@ -77,250 +84,180 @@
 	</div>
 
 	<!-- Scripts -->
-	<!-- <script>
-	var canvas = document.getElementById('my_Canvas');
+
+	<script>
+		/*============= Creating a canvas ==================*/
+		var canvas = document.getElementById('my_Canvas');
 		var gl = canvas.getContext('experimental-webgl');
 
-		var triangles = [
-			//x, y, z
-			-0.45, -1, 0, //1
-			-0.8, -0.8, 0,
-			-0.65, -1, 0,
-
-			-0.8, -0.8, 0, //2
-			-0.6, -0.92, 0,
-			-0.6, -0.72, 0,
-
-			-0.6, -0.72, 0, //3
-			-0.8, -0.8, 0,
-			-0.8, -0.42, 0,
-
-			-0.6, -0.72, 0, //4
-			-0.37, -0.48, 0,
-			-0.8, -0.42, 0,
-
-			-0.35, -0.35, 0, //5
-			-0.37, -0.48, 0,
-			-0.8, -0.42, 0,
-
-			-0.35, -0.35, 0, //6
-			-0.8, -0.1, 0,
-			-0.8, -0.42, 0,
-
-			-0.35, -0.35, 0, //7
-			-0.8, -0.1, 0,
-			-0.4, 0, 0,
-
-			-0.7, 0.2, 0, //8
-			-0.8, -0.1, 0,
-			-0.4, 0, 0,
-
-			-0.7, 0.2, 0, //9
-			-0.8, -0.1, 0,
-			-1, -0.05, 0,
-
-			-1, -0.26, 0, //10
-			-0.8, -0.1, 0,
-			-1, -0.05, 0,
-
-			-1, -0.26, 0, //11
-			-0.8, -0.1, 0,
-			-0.9, -0.34, 0,
-
-			-0.7, 0.2, 0, //12
-			-0.8, -0.1, 0,
-			0.1, 0.2, 0,
-
-			0.45, -0.1, 0, //13
-			-0.8, -0.1, 0,
-			0.1, 0.2, 0,
-
-			0.45, -0.1, 0, //14
-			-0.8, -0.1, 0,
-			0.2, -0.4, 0,
-
-			-0.35, -0.35, 0, //15
-			-0.8, -0.1, 0,
-			0.2, -0.4, 0,
-
-			0.45, -0.1, 0, //16
-			0.55, -0.45, 0,
-			0.2, -0.4, 0,
-
-			0.31, -0.7, 0, //17
-			0.55, -0.45, 0,
-			0.2, -0.4, 0,
-
-			0.31, -0.7, 0, //18
-			0.55, -0.45, 0,
-			0.6, -0.8, 0,
-
-			0.31, -0.7, 0, //19
-			0.4, -0.85, 0,
-			0.6, -0.8, 0,
-
-			0.57, -0.95, 0, //20
-			0.4, -0.85, 0,
-			0.6, -0.8, 0,
-
-			0.4, -1, 0, //21
-			0.4, -0.85, 0,
-			0.7, -1., 0,
-
-			0.45, -0.1, 0, //22
-			0.55, -0.45, 0,
-			0.84, -0.17, 0,
-
-			0.45, -0.1, 0, //23
-			0.9, 0.2, 0,
-			0.84, -0.17, 0,
-
-			0.45, -0.1, 0, //24
-			0.9, 0.2, 0,
-			0.65, 0.45, 0,
-
-			0.45, -0.1, 0, //25
-			0.38, 0.18, 0,
-			0.65, 0.45, 0,
-
-			0.45, -0.1, 0, //26
-			0.38, 0.18, 0,
-			0.1, 0.2, 0,
-
-			0.4, 0.2, 0, //27
-			0.82, 0.62, 0,
-			0.4, 0.81, 0,
-
-			0.65, 0.45, 0, //28
-			0.82, 0.62, 0,
-			0.82, 0.28, 0,
-
-			0.85, 0.8, 0, //29
-			0.82, 0.62, 0,
-			0.4, 0.81, 0,
-
-			0.85, 0.8, 0, //30
-			0.82, 0.62, 0,
-			1, 0.7, 0,
-
-			0.85, 0.8, 0, //31
-			1, 0.75, 0,
-			1, 0.7, 0,
-
-			0.7, 0.8, 0, //32
-			0.6, 0.9, 0,
-			0.4, 0.81, 0,
-
-			0.7, 0.8, 0, //33
-			0.6, 0.9, 0,
-			0.85, 0.85, 0,
-
-			0.7, 0.8, 0, //34
-			0.85, 0.8, 0,
-			0.85, 0.85, 0,
-
-			0.6, 1, 0, //35
-			0.6, 0.9, 0,
-			0.4, 0.81, 0,
-
-		]
-
-		// Create an empty buffer object
-		var vertex_buffer = gl.createBuffer();
-
-		// Bind appropriate array buffer to it
-		gl.bindBuffer(gl.ARRAY_BUFFER, vertex_buffer);
-
-		// Pass the vertex data to the buffer
-		gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(triangles), gl.STATIC_DRAW);
-
-		// Unbind the buffer
-		gl.bindBuffer(gl.ARRAY_BUFFER, null);
-
-		/*=================== Shaders ====================*/
-
-		// Vertex shader source code
-		var vertCode =
-			'attribute vec3 coordinates;' +
-			'void main(void) {' +
-			' gl_Position = vec4(coordinates, 1.0);' +
-			'}';
-
-		// Create a vertex shader object
-		var vertShader = gl.createShader(gl.VERTEX_SHADER);
-
-
-		// Attach vertex shader source code
-		gl.shaderSource(vertShader, vertCode);
-
-		// Compile the vertex shader
-		gl.compileShader(vertShader);
-
-		// colors - assignt to the arrayof colors
-		var fragCode =
-			'void main(void) {' +
-			'gl_FragColor = vec4(0.36, 0.36, 0.36, 1);' +
-			'}';
-
-		// Create fragment shader object
-		var fragShader = gl.createShader(gl.FRAGMENT_SHADER);
-
-		// Attach fragment shader source code
-		gl.shaderSource(fragShader, fragCode);
-
-		// Compile the fragmentt shader
-		gl.compileShader(fragShader);
-
-		// Create a shader program object to store
-		// the combined shader program
-		var shaderProgram = gl.createProgram();
-
-		// Attach a vertex shader
-		gl.attachShader(shaderProgram, vertShader);
-
-		// Attach a fragment shader
-		gl.attachShader(shaderProgram, fragShader);
-
-		// Link both the programs
-		gl.linkProgram(shaderProgram);
-
-		// Use the combined shader program object
-		gl.useProgram(shaderProgram);
-
-		/*======= Associating shaders to buffer objects ======*/
-
-		// Bind vertex buffer object
-		gl.bindBuffer(gl.ARRAY_BUFFER, vertex_buffer);
-
-		// Get the attribute location
-		var coord = gl.getAttribLocation(shaderProgram, "coordinates");
-
-		// Point an attribute to the currently bound VBO
-		gl.vertexAttribPointer(coord, 3, gl.FLOAT, false, 0, 0);
-
-		// Enable the attribute
-		gl.enableVertexAttribArray(coord);
-
-		/*============ Drawing the triangle =============*/
-
-		// Clear the canvas
+		// Pipeline setup.
 		gl.clearColor(1, 1, 1, 1);
-
-		// Enable the depth test
+		// Backface culling.
+		gl.frontFace(gl.CCW);
+		// Depth(Z)-buffer
 		gl.enable(gl.DEPTH_TEST);
+		gl.depthFunc(gl.LEQUAL);
+		// Polygon offset of rastered Fragments.
+		gl.enable(gl.POLYGON_OFFSET_FILL);
+		gl.polygonOffset(1.0, 1.0);
 
-		// Clear the color and depth buffer
+		// Compile vertex shader.
+		var vsSource = '' +
+			'attribute vec3 pos;' +
+			'attribute vec4 col;' +
+			'varying vec4 color;' +
+			'void main(){' + 'color = col;' +
+			'gl_Position = vec4(pos, 1);' +
+			'}';
+		var vs = gl.createShader(gl.VERTEX_SHADER);
+		gl.shaderSource(vs, vsSource);
+		gl.compileShader(vs);
+
+		// Compile fragment shader.
+		fsSource = 'precision mediump float;' +
+			'varying vec4 color;' +
+			'void main() {' +
+			'gl_FragColor = color;' +
+			'}';
+
+		var fs = gl.createShader(gl.FRAGMENT_SHADER);
+		gl.shaderSource(fs, fsSource);
+		gl.compileShader(fs);
+
+		// Link shader together into a program.
+		var prog = gl.createProgram();
+		gl.attachShader(prog, vs);
+		gl.attachShader(prog, fs);
+		gl.bindAttribLocation(prog, 0, "pos");
+		gl.linkProgram(prog);
+		gl.useProgram(prog);
+
+		//Create Fish
+		// Vertex data.
+		// Positions, Index data.
+		var vertices_fish_1, colors_fish_1, indices_lines_fish_1, indices_tris_fish_1;
+
+		// Fill the data arrays.
+		createVertexDataForFish1();
+
+		// Setup position vertex buffer object.
+		var vboPos = gl.createBuffer();
+		gl.bindBuffer(gl.ARRAY_BUFFER, vboPos);
+		gl.bufferData(gl.ARRAY_BUFFER, vertices_fish_1, gl.STATIC_DRAW);
+
+		// Bind vertex buffer to attribute variable.
+		var posAttrib = gl.getAttribLocation(prog, 'pos');
+		gl.vertexAttribPointer(posAttrib, 3, gl.FLOAT, false, 0, 0);
+		gl.enableVertexAttribArray(posAttrib);
+
+		//Setup color vertex buffer object
+		var vboCol = gl.createBuffer();
+		gl.bindBuffer(gl.ARRAY_BUFFER, vboCol);
+		gl.bufferData(gl.ARRAY_BUFFER, colors_fish_1, gl.STATIC_DRAW);
+
+		//Bind vertex buffer to attribute variable
+		var colAttrib = gl.getAttribLocation(prog, 'col');
+		gl.vertexAttribPointer(colAttrib, 4, gl.FLOAT, false, 0, 0);
+		gl.enableVertexAttribArray(colAttrib);
+
+		// Setup lines index buffer object.
+		var iboLines = gl.createBuffer();
+		gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, iboLines);
+		gl.bufferData(gl.ELEMENT_ARRAY_BUFFER, indices_lines_fish_1, gl.STATIC_DRAW);
+		iboLines.numberOfElements = indices_lines_fish_1.length;
+		gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, null);
+
+		// Setup index buffer object.
+		var iboTris = gl.createBuffer();
+		gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, iboTris);
+		gl.bufferData(gl.ELEMENT_ARRAY_BUFFER, indices_tris_fish_1, gl.STATIC_DRAW);
+		iboTris.numberOfElements = indices_tris_fish_1.length;
+		gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, null);
+
+		// Clear framebuffer and render primitives.
 		gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
 
-		// Set the view port
-		gl.viewport(0, 0, canvas.width, canvas.height);
+		// Setup rendering
+		gl.vertexAttrib4f(colAttrib, 1, 0, 0, 1);
+		gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, iboTris);
+		gl.drawElements(gl.TRIANGLES, iboTris.numberOfElements, gl.UNSIGNED_SHORT, 0);
 
-		// draw the triangles
-		gl.drawArrays(gl.TRIANGLES, 0, 115);
+		// Setup rendering lines.
+		gl.disableVertexAttribArray(colAttrib);
+		gl.vertexAttrib4f(colAttrib, 0, 0, 0, 1);
+		gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, iboLines);
+		gl.drawElements(gl.LINES, iboLines.numberOfElements, gl.UNSIGNED_SHORT, 0);
 
-		// POINTS, LINE_STRIP, LINE_LOOP, LINES,
-		// TRIANGLE_STRIP,TRIANGLE_FAN, TRIANGLES
-	</script> -->
+
+		function createVertexDataForFish1() {
+
+			var n = 50;
+			var m = 50;
+			// Positions.
+			vertices_fish_1 = new Float32Array(3 * (n + 1) * (m + 1));
+
+			// Index data.
+			indices_lines_fish_1 = new Uint16Array(2 * 2 * n * m);
+			indices_tris_fish_1 = new Uint16Array(3 * 2 * n * m);
+
+			// Color data.
+			colors_fish_1 = new Float32Array(vertices_fish_1.length * 3);
+
+			var du = 2 * Math.PI / n;
+			var dv = 2 * Math.PI / m;
+			// Counter for entries in index array.
+			var iLines = 0;
+			var iTris = 0;
+
+			for (var i = 0, u = 0; i <= n; i++, u += du) {
+
+				for (var j = 0, v = 0; j <= m; j++, v += dv) {
+
+					var iVertex = i * (m + 1) + j;
+					var y = 0.4 * Math.cos(u) * Math.cos(2 * v);
+					var z = 0.35 * Math.sin(u) * Math.cos(2 * v);
+					var x = (1 * (-2 * Math.sin(v) + 1) - 0.95);
+
+
+					// define vertex coordinates 
+					vertices_fish_1[iVertex * 3] = 0.45 * x + .35;
+					vertices_fish_1[iVertex * 3 + 1] = 0.45 * y + .2;
+					vertices_fish_1[iVertex * 3 + 2] = 0.45 * z;
+
+					//define colors
+					colors_fish_1[iVertex * 4 + 1] = 0.5;
+					colors_fish_1[iVertex * 4 + 2] = 0.5;
+					colors_fish_1[iVertex * 4 + 3] = 1;
+
+					//generate horizontal lines
+					if (j > 0 && i > 0) {
+						indices_lines_fish_1[iLines++] = iVertex - 1;
+						indices_lines_fish_1[iLines++] = iVertex;
+					}
+					//generate verticle lines
+					if (j > 0 && i > 0) {
+						indices_lines_fish_1[iLines++] = iVertex - (m + 1);
+						indices_lines_fish_1[iLines++] = iVertex;
+					}
+
+					// Set index.
+					if (j > 0 && i > 0) {
+						//triangle 1 
+						indices_tris_fish_1[iTris++] = iVertex;
+						indices_tris_fish_1[iTris++] = iVertex - 1;
+						indices_tris_fish_1[iTris++] = iVertex - (m + 1);
+						//triangle 2 
+						indices_tris_fish_1[iTris++] = iVertex - 1;
+						indices_tris_fish_1[iTris++] = iVertex - (m + 1) - 1;
+						indices_tris_fish_1[iTris++] = iVertex - (m + 1);
+					}
+				}
+
+
+			}
+
+		}
+	</script>
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/browser.min.js"></script>
 	<script src="assets/js/breakpoints.min.js"></script>
