--- a/aufgabe5.html
+++ b/aufgabe5.html
@@ -6,9 +6,38 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
+
+	<script type="text/javascript" src="5/gl-matrix.js"></script>
+	<script type="text/javascript" src="5/vertexData_cone.js"></script>
+	<script type="text/javascript" src="5/vertexData_icosphere.js"></script>
+	<script type="text/javascript" src="5/app.js"></script>
+	<script type="x-shader/x-vertex" id="vertexshader">
+		attribute vec3 aPosition;
+		attribute vec3 aNormal;
+
+		uniform mat4 uPMatrix;
+		uniform mat4 uMVMatrix;
+
+		varying vec4 vColor;
+
+		void main(){
+			gl_Position = uPMatrix * uMVMatrix * vec4(aPosition, 1.0);
+
+			vColor = vec4(aNormal.x, aNormal.y, aNormal.z, 1.0);
+			vColor = (vColor + 1.0) / 2.0;
+		}
+	</script>
+	<script type="x-shader/x-fragment" id="fragmentshader">
+		precision mediump float;
+		varying vec4 vColor;
+
+		void main() {
+			gl_FragColor = vColor;
+		}
+	</script>
 </head>
 
-<body class="is-preload">
+<body onload="app.start()">
 
 	<!-- Wrapper -->
 	<div id="wrapper">
@@ -25,21 +54,54 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h1>Exercise 3 Farbig gefüllte 2D Geometrie<br />
+							<h1>Exercise 5 Kamerabewegung<br />
 								<h1>
 						</header>
-						<p>Bearbeitungszeit: 30 - 45 Minuten</p>
-						<p>Kolorieren Sie eine eigene 2D-Geometrie indem Sie nun Dreiecke (keine Linien)
-							erzeugen<br>(Sie können auf der Lösung der vorherigen Aufgabe aufbauen). Sie können dabei
-							einfarbige Flächen oder auch Farbverläufe einsetzen.</p>
+						<p>Teil 1: Erstellen Sie eine Szene aus mindestens zwei Grundkörpern oder parametrisierten
+							Flächen. Sie soll interaktiv von allen Seiten einsehbar sein, siehe Interaktion.
+
+							<br>Teil 2: Erstellen Sie ein rekursives Kugel-Modell, wie in Lerneinheit GRU beschrieben.
+							Die Tiefe der Rekursion soll direkt von der Webseite aus interaktiv einstellbar sein. Es
+							hilft zunächst einen Oktaeder zu bauen und auf diesen aufbauend die Dreiecksteilung
+							vorzunehmen. Kolorieren Sie das Modell. Die Linien dabei sollen zusätzlich sichtbar sein,
+							oder es besteht die Möglichkeit zwischen Linien und Füllung umzuschalten. Sie können die
+							Kugel in die Szene aus Teil 1 der Aufgabe integrieren.</p>
+						<p><strong>Interaktion:</strong> Die Bewegung der „kreisenden“ Kamera erfolgt über die
+							Pfeiltasten auf einer
+							Kreisbahn um die Szene. Mittels der Taste N (und Shift-N) kann man den Radius der Bewegung
+							verändern. Zusätzlich lässt sich die Kamera über die Tasten WASD in XY-Richtung bewegen. Zur
+							Einstellung der Rekursionstiefe für die Kugel erstellen Sie ein kleines Widget oder zwei
+							Buttons mit plus und minus.<br>
+
+							<strong>Hinweis:</strong> Sie können zum Bewegen der Kamera die View-Transformation nutzen.
+							Diese berechnen
+							Sie mittels der lookAt Funktion. Dabei lässt ich die Position der Kamera (Eye) interaktiv in
+							der Szene bewegen. Achten Sie darauf, dass auch der Up-Vektor richtig eingestellt wird
+							(senkrecht zum Objektiv der virtuellen Kamera).<br>
+
+							Die Kamera kreist in der XZ-Ebene. Sie können Y unabhängig von der camera.distance
+							variieren. Wenn sie X verändern, sollten Sie die camera.distance neu berechnen.</p>
 					</div>
 
 				</section>
-				<h1></h1>
-				<p></p>
-				<section>
-
-				</section>
+				<div class="five">
+					<div class="exercise5left">
+						<canvas id="canvas" width="500" height="500"></canvas>
+					</div>
+					<div class="exercise5right">
+						<h3>Move the slider left and right to change the radius.</h3>
+						<input type="range" min="0" max="5" value="0" oninput="app.updateSphere()" id="slider">
+						<output id="value">0</output><br>
+						<h3>
+							R = rotate<br>
+							Q = rotate inverted<br>
+							W = up<br>
+							S = down<br>
+							A = left<br>
+							D = right
+						</h3>
+					</div>
+				</div>
 
 			</div>
 		</div>
