--- a/aufgabe5.html
+++ b/aufgabe5.html
@@ -84,6 +84,9 @@
 					</div>
 
 				</section>
+				<section>
+					<h1>Interact with the objects.<br>Use the controls on the right!</h1>
+				</section>
 				<div class="five">
 					<div class="exercise5left">
 						<canvas id="canvas" width="500" height="500"></canvas>
