--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 						<li><a href="aufgabe3.html">Exercise 3</a></li>
 						<li><a href="aufgabe4.html">Exercise 4</a></li>
 						<li><a href="aufgabe5.html">Exercise 5</a></li>
+						<li><a href="aufgabe6.html">Exercise 6</a></li>
+						<li><a href="aufgabe7.html">Exercise 7</a></li>
 					</ul>
 				</nav>
 
