--- a/aufgabe6.html
+++ b/aufgabe6.html
@@ -67,24 +67,11 @@
 
 				</section>
 				<section>
-					<h1>Interact with the objects.<br>Use the controls on the right!</h1>
+					<h1>Press "R" to make the spheres go inside of the donut.</h1>
 				</section>
 				<div class="five">
 					<div class="exercise5left">
 						<canvas id="canvas" width="500" height="500"></canvas>
-					</div>
-					<div class="exercise5right">
-						<h3>Move the slider left and right to change the radius.</h3>
-						<input type="range" min="0" max="5" value="0" oninput="app.updateSphere()" id="slider">
-						<output id="value">0</output><br>
-						<h3>
-							R = rotate<br>
-							Q = rotate inverted<br>
-							W = up<br>
-							S = down<br>
-							A = left<br>
-							D = right
-						</h3>
 					</div>
 				</div>
 
