content: exercise 7 final

--- a/aufgabe7.html
+++ b/aufgabe7.html
@@ -71,11 +71,21 @@
 					</div>
 				</section>
 				<section>
-					<h1>Press "R" to make the spheres go inside of the donut.</h1>
+					<h1>Christmas is around the corner!</h1>
 				</section>
 				<div class="five">
 					<div class="exercise5left">
 						<canvas id="canvas" width="500" height="500"></canvas>
+					</div>
+					<div class="exercise5right">
+						<h3>Controls:</h3>
+						<h3>
+							R = rotate<br>
+							W = closer<br>
+							S = down<br>
+							A = left<br>
+							D = further
+						</h3>
 					</div>
 				</div>
 
