--- a/aufgabe2.html
+++ b/aufgabe2.html
@@ -70,6 +70,9 @@
 						<li><a href="aufgabe5.html">Exercise 5</a></li>
 						<li><a href="aufgabe6.html">Exercise 6</a></li>
 						<li><a href="aufgabe7.html">Exercise 7</a></li>
+						<li><a href="aufgabe8.html">Exercise 8</a></li>
+						<li><a href="aufgabe9.html">Exercise 9</a></li>
+						<li><a href="aufgabe10.html">Exercise 10</a></li>
 					</ul>
 				</nav>
 
