content: fix bugs

--- a/aufgabe9.html
+++ b/aufgabe9.html
@@ -184,21 +184,13 @@
 					</div>
 				</section>
 				<section>
-					<h1>Christmas is around the corner!</h1>
+					<h1>Yet another donut! Rotate it using W,A,S,D.</h1>
 				</section>
 				<div class="five">
 					<div class="exercise5left">
 						<canvas id="canvas" width="500" height="500"></canvas>
 					</div>
 					<div class="exercise5right">
-						<h3>Controls:</h3>
-						<h3>
-							R = rotate<br>
-							W = closer<br>
-							S = down<br>
-							A = left<br>
-							D = further
-						</h3>
 					</div>
 				</div>
 
